# Inflationator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
config/: settings.py
src/: logging_config.py
src/agents/: bank.py  base.py  central_bank.py  company.py  government.py  person.py
src/cli/: main.py
src/countries/: __init__.py  base.py  registry.py
src/countries/configs/: __init__.py
src/data/: real_world_conditions.py
src/data/collectors/: __init__.py  bitcoin.py  commodities.py  country_collector.py  forex.py  market_sentiment.py
src/database/: connection.py  models.py
src/economy/: labor_market.py  market.py
src/economy/austrian/: business_cycle.py
src/geopolitics/: __init__.py  influence.py  relationships.py  war_probability.py
src/reports/: __init__.py  charts.py  generator.py  pdf_generator.py
src/simulation/: engine.py
tests/: test_agents_base.py  test_agents_person.py  test_economy_market.py
